...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEditStoreIngredientActivity"
    android:id="@+id/content">

    <EditText
        android:id="@+id/ingredientStoreAdd_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
...
